--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,22 @@ html {
   font-family: "Raleway", sans-serif;
 }
 
+section {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+  border-bottom: 1px solid #181717;
+}
+
+header,
+footer {
+  padding: 1rem;
+  background-color: #eac5fb;
+}
+
 a {
   color: #181717;
   text-decoration: none;
@@ -12,8 +28,7 @@ a:hover {
 }
 
 .header {
-  padding: 1rem;
-  background-color: #eac5fb;
+  border-bottom: 1px solid #181717;
 }
 .header__title {
   font-weight: bold;
@@ -22,7 +37,7 @@ a:hover {
 .header__title__link:hover {
   text-decoration: none;
 }
-.header__title--accent {
+.header__title__content--accent {
   font-family: "Shantell Sans", cursive;
 }
 .header__nav {
@@ -34,6 +49,11 @@ a:hover {
   display: flex;
   align-items: center;
 }
+@media screen and (max-width: 800px) {
+  .header__nav__links {
+    display: none;
+  }
+}
 
 .nav__list {
   display: flex;
@@ -41,6 +61,64 @@ a:hover {
 }
 .nav__list__item {
   list-style: none;
+}
+
+.explore__tiles {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+@media screen and (max-width: 800px) {
+  .explore__tiles {
+    flex-direction: column;
+  }
+}
+
+.tile {
+  border: 1px solid #181717;
+  height: 100px;
+  width: 100px;
+  margin: 1rem;
+}
+.tile__nav:hover {
+  text-decoration: none;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 2rem;
+}
+@media screen and (max-width: 800px) {
+  .footer {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+.footer__title {
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+.footer__title__link:hover {
+  text-decoration: none;
+}
+.footer__title__content--accent {
+  font-family: "Shantell Sans", cursive;
+}
+.footer__list {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 0.8rem;
+  padding: 0;
+}
+@media screen and (max-width: 800px) {
+  .footer__list {
+    text-align: center;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
